# adreno-llms

./: .gitattributes  .gitignore  LICENSE  README.md
src/models/lfm2-5-350m/: BENCHMARK.md  CMakeLists.txt  README.md
src/models/lfm2-5-350m/kernels/: argmax.cl  attention.cl  block_fused.cl  convolution.cl  embedding.cl  gemv_m1.cl  gemv_m1_int8.cl  gemv_m1_q4.cl  layernorm.cl  mlp.cl  mlp_fused.cl  operator_norm.cl  rmsnorm.cl  rope.cl
src/models/lfm2-5-350m/reference/: _run_reference.py  config_used.json  reference_text.txt  reference_tokens.json
src/models/lfm2-5-350m/scripts/: build.sh  deploy_android.sh  quantize_q4.py  quantize_weights.py  run_android.sh  run_local.sh
src/models/lfm2-5-350m/src/: main.cpp  model.cpp  model.h  model_config.h  opencl_context.cpp  opencl_context.h  sampler.cpp  tokenizer.cpp  tokenizer.h  utils.cpp  utils.h  weight_map.h  weights.cpp  weights.h
src/models/lfm2-5-350m/src/layers/: attention.cpp  attention.h  convolution.cpp  convolution.h  embedding.cpp  embedding.h  mlp.cpp  mlp.h  operator_norm.cpp  operator_norm.h
src/models/mms-tts/: BENCHMARK.md  CMakeLists.txt  README.md  architecture_facts.md
src/models/mms-tts/docs/: ARCHITECTURE_DATAFLOW.md  MODALITY_TTS.md
src/models/mms-tts/kernels/: bias_relu.cl  conv1d_direct_fused.cl  conv1d_image.cl  conv_1d.cl  conv_transpose_1d.cl  flow_affine_coupling.cl  flow_inverse.cl  flow_wn_fused.cl  gemm_conv1d.cl  hifigan_residual_block.cl  im2col.cl  length_regulator.cl  sample_prior.cl  text_encoder.cl  transpose.cl  voc_resblock_conv_fused.cl
src/models/mms-tts/reference/: _run_reference.py  _run_reference.py.template_sha  reference_text.txt  reference_tokens.json
src/models/mms-tts/scripts/: bench.sh  build.sh  colab_batch_convert.ipynb  colab_batch_convert.py  convert_all_languages.py  deploy_android.sh  fetch_lang.sh  fetch_uroman.sh  gen_dp_debug.py  mms_tts_languages.json  prep_lang.py  run_android.sh  run_local.sh  say.sh
src/models/mms-tts/src/: bench_recordable.cpp  benchmark.h  debug_utils.h  forward_dispatch.h  load_bin.h  main.cpp  model.cpp  model.h  model_config.h  opencl_context.cpp  opencl_context.h  probe_recordable.cpp  profiler.cpp  rng.h  rotary_tables.cpp  sampler.cpp  tokenizer.cpp  tokenizer.h  uroman.cpp  uroman.h  utils.cpp  weight_map.h  weights.cpp  weights.h
src/models/mms-tts/src/ops/: backbone.cpp  bias_relu.cpp  conv1d_gpu.cpp  conv1d_gpu.h  convolution.cpp  duration_predictor.cpp  flow_inverse.cpp  length_regulator.cpp  sample_prior.cpp  text_encoder.cpp  vocoder.cpp
src/models/mms-tts/tests/: test_uroman_amh.cpp
src/models/pocket-tts/: BENCHMARK.md  CMakeLists.txt  README.md
src/models/pocket-tts/kernels/: ops.cl
src/models/pocket-tts/reference/: forward_graph.json  inference_output.json  reference_tokens.json
src/models/pocket-tts/scripts/: build.sh  convert_tokenizer.py  convert_voices.py  cos_check.py  deploy_android.sh  download_pocket_src.py  fetch_convert_push.py  remote_dir.env  run_android.sh
src/models/pocket-tts/src/: gpu_ops.cpp  gpu_ops.h  main.cpp  model.h  model_config.h  nnopt_error.h  opencl_context.cpp  opencl_context.h  pipeline.cpp  pipeline.h  profiler.cpp  profiler.h  tokenizer.cpp  tokenizer.h  utils.cpp  utils.h  weight_map.h  weights.cpp
src/models/pocket-tts/src/ops/: Conv1d.cpp  ConvTrUpsample1d.cpp  ConvTranspose1d.cpp  DummyQuantizer.cpp  ELU.cpp  Embedding.cpp  FinalLayer.cpp  FlowLMModel.cpp  Identity.cpp  LUTConditioner.cpp  LayerNorm.cpp  Linear.cpp  ProjectedTransformer.cpp  ResBlock.cpp  RotaryEmbedding.cpp  SEANetDecoder.cpp  SEANetResnetBlock.cpp  Sequential.cpp  SimpleMLPAdaLN.cpp  StreamingConv1d.cpp  StreamingConvTranspose1d.cpp  StreamingTransformer.cpp  StreamingTransformerLayer.cpp  TimestepEmbedder.cpp
src/models/smollm2-135m-instruct/: BENCHMARK.md  CMakeLists.txt  README.md
src/models/smollm2-135m-instruct/kernels/: argmax.cl  attention.cl  block_fused.cl  embedding.cl  layernorm.cl  mlp_swiglu.cl  rmsnorm.cl  rope.cl
src/models/smollm2-135m-instruct/reference/: _run_reference.py  config_used.json  reference_text.txt  reference_tokens.json
src/models/smollm2-135m-instruct/scripts/: benchmark_prompts.sh  build.sh  deploy_android.sh  perf_mode.sh  quantize_weights.py  run_android.sh  run_local.sh
src/models/smollm2-135m-instruct/src/: debug_utils.h  main.cpp  model.cpp  model.h  model_config.h  opencl_context.cpp  opencl_context.h  prof.cpp  prof.h  tokenizer.cpp  utils.cpp  weight_map.h  weights.cpp
src/models/smollm2-135m-instruct/src/layers/: attention.cpp  attention.h  embedding.cpp  embedding.h  layer_norm.cpp  layer_norm.h  lm_head.cpp  lm_head.h  mlp.cpp  mlp.h
src/models/smolvlm-256m-instruct/: BENCHMARK.md  CMakeLists.txt  README.md  architecture_facts.md
src/models/smolvlm-256m-instruct/kernels/: attention.cl  backbone.cl  bias_add.cl  block_fused_int8.cl  conv2d.cl  decoder_layer.cl  embedding.cl  encoder_layer.cl  idefics3_connector.cl  idefics3_model.cl  idefics3_simple_mlp.cl  idefics3_vision_embeddings.cl  idefics3_vision_mlp.cl  idefics3_vision_transformer.cl  im2col.cl  image_normalize.cl  layer_norm.cl  llama_mlp.cl  mlp.cl  pixel_shuffle.cl  pytorch_gelutanh.cl  rms_norm.cl  rotary_embedding.cl  silu.cl  splice_image_tokens.cl  utils.cl  vision_attention.cl
src/models/smolvlm-256m-instruct/reference/: _gen_prompt_ids.py  _run_reference.py  reference_caption_text.txt  reference_caption_tokens.json  reference_tokens.json
src/models/smolvlm-256m-instruct/scripts/: build.sh  deploy_android.sh  qcheck_generate_features.py  quality_check.sh  quantize_weights.py  rebake_pos_embed_384.py  run_android.sh  run_local.sh
src/models/smolvlm-256m-instruct/src/: debug_utils.h  forward_dispatch.h  load_image.h  main.cpp  model.cpp  model.h  model_config.h  opencl_context.cpp  opencl_context.h  profile.h  rotary_tables.cpp  sampler.cpp  tokenizer.cpp  tokenizer.h  utils.cpp  utils.h  weight_map.h  weights.cpp  weights.h
src/models/smolvlm-256m-instruct/src/ops/: backbone.cpp  conv2d.cpp  embedding.cpp  idefics3_connector.cpp  idefics3_encoder_layer.cpp  layer_norm.cpp  (+21 more)
(+617 files in other folders)
